[tool.poetry]
name = "mercylog-bashlog"
version = "0.2.0"
description = "Datalog(Bashlog) Inspired Logic Programming in Python"
authors = ["Rajiv Abraham <rajiv.abraham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
